crates/elenchus-parser/tests/snapshots/errors__garbage_top_level_line.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        FACT a b\n        %%% not a statement\n        FACT c d\n        \"#)"
---
Syntax Error at line 3, col 1: expected a statement (IMPORT/FACT/NOT/PREMISE/RULE/CHECK)
  |         %%% not a statement
  | ^--- here
